# pydantify

./: .dockerignore  .gitignore  .gitlab-ci.yml  404.html  Dockerfile  LICENSE  Makefile  README.md  conftest.py  index.html  input.json  mkdocs.yml  out.py  pyproject.toml
.github/workflows/: docs.yaml  main.yaml
architecture/: index.html
docs/: architecture.md  faq.md  index.md  install.md
docs/examples/: hello_world.md  ietf_interfaces.md
docs/resources/: classes_models.mmd  classes_pydantify.mmd  classes_pydantify.plantuml  packages_pydantify.mmd  packages_pydantify.plantuml
docs/technologies/: dmcg.md  pyang.md  pydantic.md  yang.md
examples/: ietf-interfaces.yang  ietf-yang-types.yang
examples/hello_world/: create_json.py  create_xml.py  endpoint.py  endpoint1.json  endpoint1.xml  endpoint1_json_exclude_default_and_by_alias.json  endpoint2.json  endpoint2.xml  endpoint3.json  endpoint3.xml  endpoint4.xml  endpoint5.json  endpoint5.xml  index.html  my-endpoint.yang  pyang_tree.txt
examples/ietf-interfaces/: README.md  ietf_interfaces.py  netconf.py  pyang_tree.txt  restconf.py
examples/ietf_interfaces/: index.html
examples/minimal/: interfaces.yang  sample_data.json  sample_output.py
examples/with_leafref/: interfaces.yang  sample_data.json
examples/with_restrictions/: interfaces.yang  sample_output.py
examples/with_typedef/: sample_output.py
examples/with_uses/: interfaces.yang
faq/: index.html
install/: index.html
pydantify/: main.py  run.py
pydantify/generator/: __init__.py  model_generator.py
pydantify/models/: __init__.py  base.py  model_generator.py  models.py  nodefactory.py  typeresolver.py  yang_sources_tracker.py
pydantify/plugins/: pydantic_plugin.py
pydantify/utility/: __init__.py  function_tools.py  model_generator.py  patterns.py  restconf.py  yang_sources_tracker.py
resources/: classes_models.mmd  classes_pydantify.mmd  packages_pydantify.mmd
search/: search_index.json
src/pydantify/: exceptions.py  main.py
src/pydantify/models/: __init__.py  base.py  models.py  typeresolver.py
src/pydantify/plugins/: pydantic_plugin.py
src/pydantify/utility/: __init__.py  model_generator.py  netconf.py  restconf.py  xml.py  yang_sources_tracker.py
technologies/dmcg/: index.html
technologies/pyang/: index.html
technologies/pydantic/: index.html
technologies/yang/: index.html
tests/: test_model_data.py  test_model_generator.json  test_model_generator.py  test_model_generator_result.py  test_model_structure.py  test_patterns.py
tests/examples/minimal/: expected.json  expected.py  expected_standalone.py  expected_trimmed.json  expected_trimmed.py  interfaces.yang  sample_data.json
tests/examples/multimodel/: expected.py  interfaces.yang
tests/examples/netconf/: expected.py
tests/examples/openconfig/: expected.json  expected.py  expected_config_only.json  expected_config_only.py  expected_state_only.json  expected_state_only.py  expected_stripped_ns.py
tests/examples/turing-machine/: expected.json  expected.py  sample_data.json  turing-machine.yang
tests/examples/with_augment/: README.md  configuration.yang  expected.json  expected.py  interfaces.yang  namespaces.yang  sample_data.json
tests/examples/with_bits/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_case/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_complex_case/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_decimal64/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_empty/: expected.py  interface.yang  interfaces.yang  sample_data.json
tests/examples/with_enum/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_identity_default/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_identity_default_list/: ciphers.yang  expected.json  expected.py  sample_data.json
tests/examples/with_import_uses/: README.md  configuration.yang  expected.json  expected.py  namespaces.yang
tests/examples/with_leaflist/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_leaflist_pattern/: interfaces.yang  sample_data.json
tests/examples/with_leafref/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_leafref2/: expected.json  expected.py  keychains.yang  sample_data.json
tests/examples/with_restrictions/: expected.json  expected.py  sample_data.json
tests/examples/with_typedef/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_union/: expected.json  expected.py  interfaces.yang  sample_data.json
tests/examples/with_uses/: expected.json  expected.py  interfaces.yang  sample_data.json
yang2pydantic/: __main__.py  main.py  run.py
yang2pydantic/generator/: model_generator.py
yang2pydantic/models/: models.py
yang2pydantic/plugins/: __init__.py  pydantic.py  pydantic_plugin.py
yang2pydantic/submodule/: __init__.py  subcomponent.py
