[project]
name = "pydantify"
version = "0.5.0"
description = "Makes network automation pydantic."
authors = [
    { name = "Dominic Walther", email = "dominic.walther@ost.ch" },
    { name = "Dejan Jovicic", email = "dejan.jovicic@ost.ch" },
]
dependencies = [
    "pydantic>=1.10.2",
    "pyang>=2.5.3",
    "psutil>=5.9.4",
    "datamodel-code-generator @ git+https://github.com/koxudaxi/datamodel-code-generator.git@2f722699e046c030a5ca61f975bf98497c212b33",
    "requests>=2.28.1",
    "typing-extensions>=4.4.0",
]
requires-python = ">=3.10"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.scripts]
pydantify = "pydantify.main:main"

[project.urls]
Repository = "https://gitlab.ost.ch/pydantic-sa/pydantify"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.7.0",
    "black>=22.10.0",
    "pylint>=2.15.5",
    "pytest>=7.2.0",
    "coverage>=6.5.0",
    "types-requests>=2.28.11.7",
    "types-psutil>=5.9.5.5",
    "mypy @ git+https://github.com/python/mypy.git",
]

[tool.pdm.scripts]
class_diagram = "pyreverse -o plantuml -d graphs --project pydantify --colorized pydantify"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)8s] (%(filename)s:%(lineno)s): %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
