[project]
name = "pydantify"
version = "0.6.0"
description = "Makes network automation pydantic."
authors = [
    { name = "Dominic Walther", email = "dominic.walther@ost.ch" },
    { name = "Dejan Jovicic", email = "dejan.jovicic@ost.ch" },
]
dependencies = [
    "pydantic==2.9.0",
    "pyang==2.6.1",
    "psutil>=6.0.0",
    "datamodel-code-generator==0.25.8",
    "requests>=2.32.3",
    "typing-extensions>=4.12.2",
    "setuptools>=74.0.0",
]
requires-python = ">=3.10"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.scripts]
pydantify = "pydantify.main:main"

[project.urls]
Repository = "https://gitlab.ost.ch/pydantic-sa/pydantify"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.3.1",
    "black>=24.8.0",
    "pylint>=3.2.6",
    "pytest>=8.3.2",
    "coverage>=7.6.1",
    "types-requests>=2.32.0.0",
    "types-psutil>=6.0.0.0",
    "mypy>=1.11.2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.33",
]

[tool.pdm.scripts]
class_diagram = "pyreverse -o mmd -d docs/resources --project pydantify --colorized pydantify"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)8s] (%(filename)s:%(lineno)s): %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
